k8s-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taptima
  labels:
    name: taptima
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: questionnaire-frontend
  namespace: taptima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-frontend
  template:
    metadata:
      labels:
        app: questionnaire-frontend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - questionnaire-frontend
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: questionnaire-frontend:latest
        imagePullPolicy: IfNotPresent
        name: questionnaire-frontend
        ports:
        - name: tcp-4200
          containerPort: 4200
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: questionnaire-backend
  namespace: taptima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-backend
  template:
    metadata:
      labels:
        app: questionnaire-backend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - questionnaire-backend
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: questionnaire-backend:latest
        imagePullPolicy: IfNotPresent
        name: questionnaire-backend
        ports:
        - name: tcp-3000
          containerPort: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: questionnaire-mongodb
  namespace: taptima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-mongodb
  template:
    metadata:
      labels:
        app: questionnaire-mongodb
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - questionnaire-mongodb
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: mongo:8.0.3
        imagePullPolicy: IfNotPresent
        name: questionnaire-mongodb
        ports:
        - name: tcp-27017
          containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: questionnaire-frontend
  namespace: taptima
  labels:
    app: questionnaire-frontend
spec:
  selector:
    app: questionnaire-frontend
  ports:
    - name: tcp-4200
      protocol: TCP
      port: 4200
      targetPort: 4200    
---
apiVersion: v1
kind: Service
metadata:
  name: questionnaire-backend
  namespace: taptima
  labels:
    app: questionnaire-backend
spec:
  selector:
    app: questionnaire-backend
  ports:
    - name: tcp-3000
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: questionnaire-mongodb
  namespace: taptima
  labels:
    app: questionnaire-mongodb
spec:
  selector:
    app: questionnaire-mongodb
  ports:
    - name: tcp-27017
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questionnaire
  namespace: taptima
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/client-max-body-size: "100m"
    nginx.org/lb-method: ip_hash
spec:
  ingressClassName: nginx
  rules:
  - host: questionnaire.local
    http:
      paths:
      - backend:
          service:
            name: questionnaire-frontend
            port:
              number: 4200
        path: /
        pathType: Prefix
